--- a/source/App.css
+++ b/source/App.css
@@ -1,7 +1,15 @@
-/*
-	Put anything you reference with "url()" in ../assets/
-	This way, you can minify your application, and just remove the "source" folder for production
-*/
-.nice-padding {
-	padding: 15px;
+BODY {
+    font-family:Courier New;
 }
+
+.cursor {
+    position:absolute;
+    top:0em;
+    border-bottom:2px solid black;
+    height:1em;
+}
+
+.cursor.insert {
+    border-bottom:4px solid black
+}
+​
